<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
     <parent>
        <groupId>me.legrange</groupId>
        <artifactId>service</artifactId>
        <version>1.0</version>
    </parent>
    <artifactId>service-server</artifactId>   
    <packaging>jar</packaging>
    <dependencies>
        <dependency>
            <groupId>me.legrange</groupId>
            <artifactId>yaml-config</artifactId>
            <version>[2.0.1,)</version>
        </dependency>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>log</artifactId>
            <version>${project.version}</version>
        </dependency>
    </dependencies>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>
    <name>Startable Service</name>
</project>
